--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.4.8",
+    "file-saver": "^2.0.1",
     "qs": "^6.6.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue-splitpane": "^1.0.4"
+    "xlsx": "^0.14.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -47,6 +48,7 @@
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
     "sass-loader": "^7.1.0",
+    "script-loader": "^0.7.2",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
